# sahara-plugin-spark

./: .gitreview  .stestr.conf  .zuul.yaml  CONTRIBUTING.rst  README.rst  lower-constraints.txt  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
doc/source/: conf.py  index.rst
doc/source/contributor/: contributing.rst
doc/source/user/: index.rst  spark-plugin.rst
releasenotes/notes/: spark-on-image-pack-f5609daf38c45b6f.yaml
releasenotes/source/: conf.py  index.rst
releasenotes/source/locale/de/LC_MESSAGES/: releasenotes.po
releasenotes/source/locale/en_GB/LC_MESSAGES/: releasenotes.po
releasenotes/source/locale/ne/LC_MESSAGES/: releasenotes.po
sahara_plugin_spark/: i18n.py
sahara_plugin_spark/locale/de/LC_MESSAGES/: sahara_plugin_spark.po
sahara_plugin_spark/locale/en_GB/LC_MESSAGES/: sahara_plugin_spark.po
sahara_plugin_spark/locale/id/LC_MESSAGES/: sahara_plugin_spark.po
sahara_plugin_spark/locale/ne/LC_MESSAGES/: sahara_plugin_spark.po
sahara_plugin_spark/plugins/spark/: config_helper.py  edp_engine.py  images.py  plugin.py  run_scripts.py  scaling.py  shell_engine.py
sahara_plugin_spark/plugins/spark/resources/images/: image.yaml
sahara_plugin_spark/plugins/spark/resources/images/centos/: turn_off_services  wget_cdh_repo
sahara_plugin_spark/plugins/spark/resources/images/common/: add_jar  install_extjs  install_spark  manipulate_s3
sahara_plugin_spark/plugins/spark/resources/images/ubuntu/: config_spark  turn_off_services  wget_cdh_repo
sahara_plugin_spark/tests/: __init__.py
sahara_plugin_spark/tests/unit/plugins/spark/: test_config_helper.py  test_plugin.py
