[metadata]
name = sahara-plugin-spark
summary = Spark Plugin for Sahara Project
description-file = README.rst
license = Apache Software License
python-requires = >=3.6
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/sahara/latest/

[files]
packages =
    sahara_plugin_spark

[entry_points]
sahara.cluster.plugins =
    spark   = sahara_plugin_spark.plugins.spark.plugin:SparkProvider

[compile_catalog]
directory = sahara_plugin_spark/locale
domain = sahara_plugin_spark

[update_catalog]
domain = sahara_plugin_spark
output_dir = sahara_plugin_spark/locale
input_file = sahara_plugin_spark/locale/sahara_plugin_spark.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = sahara_plugin_spark/locale/sahara_plugin_spark.pot
